# Hidato_Generator_Solver

./: CHANGELOG.md  LICENSE  README.md  hidato.cabal
app/: Main.hs  MainGenerator.hs  MainSolver.hs
docs/: informe.md
src/: HidatoCommon.hs  HidatoGenerator.hs  HidatoSolver.hs  Utils.hs
