cabal-version:      2.4
name:               hidato
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Leismael
maintainer:         leismael.sosa17@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

-- Esto siguiente es agregado por mi
common common-all
    build-depends:    base ^>=4.16.1.0, random ^>= 1.2.1.1
    default-language: Haskell2010
    -- ghc-options:      -Wall -Werror
    ghc-options:      -Wall -O2

library
    import: common-all
    exposed-modules:
        Utils,
        HidatoCommon,
        HidatoSolver,
        HidatoGenerator

    -- exposed-modules: Utils,HidatoGenerator
    hs-source-dirs:   src

executable hidatosolver
    import:           common-all
    main-is:          MainSolver.hs

    other-modules:
        Utils,
        HidatoCommon,
        HidatoSolver,
        HidatoGenerator
    hs-source-dirs:   app, src
    ghc-options:      -main-is MainSolver

executable HidatoGenerator
    import:           common-all
    main-is:          MainGenerator.hs

    other-modules:
        Utils,
        HidatoCommon,
        HidatoSolver,
        HidatoGenerator
    hs-source-dirs:   app, src
    ghc-options:      -main-is MainGenerator
